# peterpy

./: .env  .env.development  .gitignore  Dockerfile  Makefile  README.md  config.development.yaml  config.yaml  docker-compose.yaml  mock-products.json  pylintrc  pyproject.toml
.github/workflows/: makefile.yml
peterpy/: __init__.py  app.py  config.py  middlewares.py
peterpy/database/: __init__.py  connection.py  data_mapper.py
peterpy/database/models/: __init__.py  base.py  product.py
peterpy/entities/: __init__.py  product.py
peterpy/handlers/: __init__.py  health.py  health_handler.py  product_handler.py  products.py
peterpy/helpers/: __init__.py  json_response.py  peterpy_encoder.py
peterpy/interfaces/: __init__.py  entity.py  repository.py  request.py
peterpy/libs/: __init__.py  match.py
peterpy/repositories/: __init__.py  database_product_repository.py  memory_product_repository.py  product_repository.py
peterpy/services/: __init__.py  kafka_service.py  product_service.py
tests/: count_price.py  mock-products.json  test_app.py
tests/handlers/: __init__.py  test_instance_health.py  test_product_handler.py  test_product_handler_integration.py  test_product_handler_unit.py
tests/helpers/: __init__.py  create_uuid_from_string.py
tests/repositories/: test_database_product_repository.py  test_memory_product_repository.py
