[tool.poetry]
name = "peterpy"
version = "0.1.0"
description = ""
authors = ["Peter van Dijk <peter.van.dijk@bynder.com>"]
readme = "README.md"

[tool.poetry.scripts]
peterpy = "peterpy.app:main"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
tomlkit = "^0.12.4"
configloader = "^1.0.1"
uvloop = "^0.19.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
